# streamgraph

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: black.yml  codeql.yml  flake8.yml  lint_format_checker.yml  pylint.yml
docs/: streamgraph.base.html  streamgraph.utils.html
streamgraph/: __init__.py  base.py  components.py  conditional_nodes.py  utils.py
