[tool.poetry]
name = "streamgraph"
version = "0.1.0"
description = "A library for creating and managing chains of function nodes."
authors = ["Francesco Lorè <flore9819@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/lf-data/streamgraph"
repository = "https://github.com/lf-data/streamgraph"
license = "Apache-2.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.8"
colorama = "^0.4.6"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/lf-data/streamgraph/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
